# Smart-Warehouse-Demand-Forecasting

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  demand-key-new.pem  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: streamlit_app.py
artifacts/: cost_comparison.csv  cost_summary.json  inventory_simulation_metrics.json  metrics.json
data/outputs/: inventory_plan.parquet
data/schemas/: sales_schema.py
docker/: Dockerfile.api  Dockerfile.inference  Dockerfile.train
pipelines/: inference_pipeline.py  retraining_pipeline.py
src/api/: main.py  policy_api.py
src/evaluation/: baseline_vs_model.py  cost_model.py  inventory_simulation.py
src/features/: feature_defs.py  feature_engineering.py
src/inference/: api.py  prediction_logic.py  schemas.py
src/ingestion/: batch_ingest.py
src/models/: baseline.py  probabilistic_model.py
src/monitoring/: data_drift.py  prediction_drift.py
src/training/: evaluate.py  hyperparameter_tuning.py  train.py
tests/: conftest.py
tests/unit/: test_features.py  test_inference.py
