
Content:

```toml
[project]
name = "smart-warehouse-demand-forecasting"
version = "0.1.0"
description = "Demand forecasting and inventory optimization system"
authors = [{name = "Aarush Garg"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "xgboost",
    "scikit-learn",
    "pyarrow",
    "streamlit",
    "fastapi",
    "uvicorn",
    "joblib",
    "matplotlib",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"