[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-warehouse-demand-forecasting"
version = "0.1.0"
description = "Demand forecasting system for warehouse inventory optimization"
authors = [
    {name = "Aarush Garg"}
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"